--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-i18next": "^11.18.6",
+    "react-latex-next": "^2.3.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "redux": "^4.2.0",
