--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.1",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@iconify/react": "^4.0.0",
@@ -22,6 +23,7 @@
     "dotenv": "^16.4.5",
     "emoji-mart": "^5.2.2",
     "framer-motion": "^7.5.3",
+    "graphql": "^16.8.1",
     "phosphor-react": "^1.4.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
