--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@iconify/react": "^4.0.0",
+    "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.10.8",
     "@mui/system": "^5.15.13",
     "@reduxjs/toolkit": "^1.9.0",
